--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,6 +43,7 @@ optimize = """docker run --rm -v "$(pwd)":/code \
 cosmwasm-std = { version = "1.0.0-beta6" }
 cosmwasm-storage = { version = "1.0.0-beta6" }
 cw-storage-plus = "0.13"
+cw-controllers = "0.13.0"
 cw2 = "0.13"
 schemars = "0.8"
 serde = { version = "1.0", default-features = false, features = ["derive"] }
